--- a/test.env
+++ b/test.env
@@ -1,4 +1,4 @@
-BASE_PATH=/home/meaux/Development/eclipse_workspace
+BASE_PATH=$(pwd)/..
 
 ADD_PYTHON=$BASE_PATH/git-MDOTools/modules:$BASE_PATH/git-DLLM/modules
 
