Reorganize unit tests. - Split unit tests for simple airfoils - Add validation unit tests for new terms computed by the DLLM

--- a/test.env
+++ b/test.env
@@ -5,3 +5,5 @@ ADD_PYTHON=$BASE_PATH/git-MDOTools/modules:$BASE_PATH/git-DLLM/modules
 PYTHONPATH=$ADD_PYTHON
 
 echo 'PYTHONPATH=' $PYTHONPATH
+
+export PYTHONPATH
